# mcp-server-demo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/partner_account_analyzer/: README.md  __init__.py  server.py
src/partner_case_analyzer/: README.md  __init__.py  server.py
